8/11 대댓글, 좋아요기능 완