@@ -6,11 +6,11 @@ import com.example.Board_basic.Entity.Post;
 import com.example.Board_basic.Repository.CommentRepository;
 import com.example.Board_basic.Repository.PostRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,29 +19,82 @@ public class CommentService {
     private final CommentRepository commentRepository;
     private final PostRepository postRepository;
 
-    public List<CommentDto> listByPost(Long postId) {
-        return commentRepository.findByPostId(postId, Sort.by(Sort.Direction.DESC, "id"))
-                .stream().map(CommentDto::fromEntity).toList();
+    /**
+     * 댓글을 "부모 -> 자식" 순서로 정렬해 들여쓰기(depth)와 함께 평탄화해서 반환
+     */
+    public List<CommentDto> listByPostFlat(Long postId) {
+        // 모든 댓글을 한 번에 가져와서 메모리에서 트리 순서로 정렬
+        List<Comment> all = commentRepository.findByPostIdOrderByCreatedDateAsc(postId);
+
+        // parentId -> children 목록 맵 구성
+        Map<Long, List<Comment>> childrenMap = all.stream()
+                .collect(Collectors.groupingBy(
+                        c -> c.getParent() == null ? 0L : c.getParent().getId(),
+                        LinkedHashMap::new,
+                        Collectors.toList()
+                ));
+
+        // 루트 댓글(부모 null)
+        List<Comment> roots = childrenMap.getOrDefault(0L, Collections.emptyList());
+        roots.sort(Comparator.comparing(Comment::getCreatedDate).thenComparing(Comment::getId));
+
+        List<CommentDto> result = new ArrayList<>();
+        for (Comment root : roots) {
+            dfsFlatten(root, 0, childrenMap, result);
+        }
+        return result;
     }
 
-    public Long add(Long postId, String content, String nickname) {
-        if (nickname == null || nickname.isBlank())
-            throw new IllegalStateException("로그인이 필요합니다.");
-        if (content == null || content.isBlank())
-            throw new IllegalArgumentException("댓글 내용을 입력하세요.");
+    private void dfsFlatten(Comment node, int depth,
+                            Map<Long, List<Comment>> childrenMap,
+                            List<CommentDto> out) {
+        CommentDto dto = CommentDto.fromEntity(node);
+        dto.setDepth(depth); // 보여줄 들여쓰기는 여기서 강제 설정
+        out.add(dto);
 
+        List<Comment> children = childrenMap.getOrDefault(node.getId(), Collections.emptyList());
+        children.sort(Comparator.comparing(Comment::getCreatedDate).thenComparing(Comment::getId));
+        for (Comment ch : children) {
+            dfsFlatten(ch, depth + 1, childrenMap, out);
+        }
+    }
+
+    // 원댓글
+    public Long add(Long postId, String content, String nickname) {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("게시글이 존재하지 않습니다."));
+        Comment c = commentRepository.save(Comment.builder()
+                .post(post)
+                .parent(null)
+                .depth(0)
+                .content(content)
+                .writer(nickname)
+                .createdDate(LocalDateTime.now())
+                .build());
+        return c.getId();
+    }
 
-        Comment saved = commentRepository.save(
-                Comment.builder()
-                        .post(post)
-                        .content(content)
-                        .writer(nickname)
-                        .createdDate(LocalDateTime.now())
-                        .build()
-        );
-        return saved.getId();
+    // 대댓글
+    public Long reply(Long postId, Long parentId, String content, String nickname) {
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() -> new IllegalArgumentException("게시글이 존재하지 않습니다."));
+        Comment parent = commentRepository.findById(parentId)
+                .orElseThrow(() -> new IllegalArgumentException("부모 댓글이 존재하지 않습니다."));
+
+        // 안전 가드: 부모 댓글이 같은 글의 댓글인지 확인
+        if (!Objects.equals(parent.getPost().getId(), postId)) {
+            throw new IllegalArgumentException("부모 댓글이 해당 게시글의 댓글이 아닙니다.");
+        }
+
+        Comment c = commentRepository.save(Comment.builder()
+                .post(post)
+                .parent(parent)
+                .depth(parent.getDepth() + 1)
+                .content(content)
+                .writer(nickname)
+                .createdDate(LocalDateTime.now())
+                .build());
+        return c.getId();
     }
 
     public void delete(Long commentId, String nickname, boolean isAdmin) {
